# ghostty-xterm-compat-serialize

./: Cargo.toml  README.md
crates/ghostty-xterm-compat-serialize/: Cargo.toml
crates/ghostty-xterm-compat-serialize/src/: lib.rs
tests/xterm-compat/: .gitignore  README.md
tests/xterm-compat/compare/: compare.mjs  compare.test.mjs
tests/xterm-compat/fixtures/: README.md  alt_save_restore_cursor_in_alt.json  alt_screen_late_blue_fill.json  alternate_screen.json  alternate_screen_scrollback.json  any_mouse_active.json  application_cursor_keys_active.json  application_keypad_active.json  button_mouse_active.json  button_plus_sgr_mouse.json  cursor_hidden_bar.json  cursor_shape_only.json  decset_1048_restore_cursor.json  decset_1048_restore_hidden_cursor.json  focus_plus_button_mouse.json  focus_plus_normal_mouse.json  insert_focus_mouse.json  insert_mode_active.json  left_right_margin_active.json  less_page_forward.json  less_small_file_open.json  multiline_output.json  normal_mouse_active.json  normal_plus_sgr_mouse.json  nvim_cursor_down.json  nvim_insert_escape.json  nvim_small_file_open.json  origin_mode_active.json  palette_override_ansi_color.json  paste_focus_mouse.json  prompt_redraw.json  prompt_redraw_offset.json  reverse_wrap_enabled.json  save_restore_cursor_cross_line.json  save_restore_with_style.json  scroll_region_active.json  scrollback_output.json  scrollback_styled_output.json  startup_prompt.json  (+6 more)
tests/xterm-compat/ghostty-runner/: Cargo.toml
tests/xterm-compat/ghostty-runner/src/: main.rs
tests/xterm-compat/ghostty-runner/tests/: ghostty_runner.rs
(+3 files in other folders)
