[package]
name = "ghostty-xterm-compat-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "xterm-compatible serialize output for libghostty-vt terminals"

[dependencies]
libghostty-vt = { git = "https://github.com/jemdiggity/libghostty-rs.git", rev = "4e1af4d44f12bb2691cd752ad136cb8089696355", package = "libghostty-vt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
