[package]
name = "ghostty-xterm-compat-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "xterm-compatible serialize output for libghostty-vt terminals"

[dependencies]
libghostty-vt = { git = "https://github.com/jemdiggity/libghostty-rs.git", rev = "03c9702f6515305b0d19669596f904691df8c341", package = "libghostty-vt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
