[package]
name = "ghostty-xterm-compat-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ghostty-xterm-compat-serialize = { path = "../../../crates/ghostty-xterm-compat-serialize" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
